<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

   <FrameLayout
       android:id="@+id/calculator1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="gone">

       <LinearLayout
           android:id="@+id/result"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/resultField"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:textSize="18sp"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/operationField"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:textSize="18sp"
               android:layout_height="wrap_content"
               />
       </LinearLayout>
       <EditText
           android:id="@+id/numberField"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="phone" />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
           >
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_7"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_8"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_9"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/divide"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp">
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_4"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_5"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_6"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/multiply"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="150dp">
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_1"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_2"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_3"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/subtract"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="200dp">
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/_0"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/comma"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/sum"/>
           <Button
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/equal" />
       </LinearLayout>
   </FrameLayout>

    <FrameLayout
        android:id="@+id/calculator2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:text="@string/c"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:text="@string/plusMinus"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:text="@string/back"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/divide"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_7"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_8"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_9"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/multiply"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_4"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_5"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_6"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/subtract"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="250dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_1"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_2"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_3"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/sum"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="300dp">

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/comma"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/_0"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/percent"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/equal"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="350dp">

            <Button
                android:id="@+id/btnOpenBracket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/bracketsOpen"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnCloseBracket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/bracketsClosed"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSquare"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/square"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/sqrt"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>
    </FrameLayout>
    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switcher"/>
</LinearLayout>